go/src/homework/module8/myservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: test
spec:
  type: ExternalName
  externalName: thrill.bill.hk
