go/src/homework/module8/myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplehttp
spec:
  ingressClassName: nginx
  rules:
    - host: thrill.bill.hk
      http:
        paths:
          - backend:
              service:
                name: my-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
